Test: force workflow failure for Slack notification debugging

--- a/.github/workflows/check-availability.yml
+++ b/.github/workflows/check-availability.yml
@@ -50,3 +50,6 @@ jobs:
 
           # Log to console as well
           echo "Kobo Remote is currently: $STATUS"
+
+          # TEMPORARY: Force failure to test Slack notifications
+          exit 1
