--- a/.github/workflows/check-availability.yml
+++ b/.github/workflows/check-availability.yml
@@ -14,6 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Check Kobo Remote availability
+        id: check
         run: |
           PRODUCT_URL="https://pt.kobobooks.com/products/kobo-remote"
 
@@ -26,7 +27,7 @@ jobs:
             EMOJI="🟢"
             MESSAGE="The Kobo Remote is back in stock! Buy now!"
           else
-            STATUS="Sold Out"
+            STATUS="SOLD_OUT"
             EMOJI="🔴"
             MESSAGE="Still sold out (Esgotado). Check again tomorrow."
           fi
@@ -45,16 +46,26 @@ jobs:
           echo "" >> $GITHUB_STEP_SUMMARY
           echo "*Checked: $CURRENT_TIME (Lisbon)*" >> $GITHUB_STEP_SUMMARY
 
-          # Output status for potential downstream use
+          # Output for downstream steps
           echo "status=$STATUS" >> $GITHUB_OUTPUT
+          echo "emoji=$EMOJI" >> $GITHUB_OUTPUT
+          echo "message=$MESSAGE" >> $GITHUB_OUTPUT
+          echo "url=$PRODUCT_URL" >> $GITHUB_OUTPUT
+          echo "time=$CURRENT_TIME" >> $GITHUB_OUTPUT
 
-          # Log to console as well
+          # Log to console
           echo "Kobo Remote is currently: $STATUS"
 
-          # Exit with status code based on availability
-          # Success (0) = In Stock, Failure (1) = Out of Stock
-          if [ "$STATUS" = "AVAILABLE" ]; then
-            exit 0
-          else
-            exit 1
-          fi
+      - name: Notify via GitHub Issue comment
+        if: always()
+        uses: peter-evans/create-or-update-comment@v4
+        with:
+          issue-number: 1
+          body: |
+            ${{ steps.check.outputs.emoji }} **Kobo Remote Status: ${{ steps.check.outputs.status }}**
+
+            ${{ steps.check.outputs.message }}
+
+            🔗 [View Product Page](${{ steps.check.outputs.url }})
+
+            _Checked: ${{ steps.check.outputs.time }} (Lisbon)_
